# robosystems-python-client

./: README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/commands/: create-issue.md  create-pr.md  test.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: spec.yml
.github/workflows/: create-pr.yml  create-release.yml  publish.yml  tag-release.yml
examples/: README.md  basic_query.py  e2e_workflow.py
robosystems_client/: __init__.py
robosystems_client/clients/: README.md  __init__.py  auth_integration.py  dataframe_utils.py  document_client.py  facade.py  graph_client.py  investor_client.py  ledger_client.py  library_client.py  operation_client.py  operator_client.py  sse_client.py
robosystems_client/extensions/: README.md  __init__.py  document_client.py  extensions.py  file_client.py  graph_client.py  investor_client.py  ledger_client.py  materialization_client.py  query_client.py  report_client.py  sse_client.py  subgraph_workspace_client.py  table_client.py  table_ingest_client.py  view_builder_client.py
robosystems_client/graphql/: __init__.py  client.py
robosystems_client/models/: __init__.py  account_list_response.py  account_response.py  account_rollup_group.py  account_rollup_row.py  account_rollups_response.py  account_tree_node.py  account_tree_response.py  add_members_request.py  add_publish_list_members_operation.py  agent_list_response_agents.py  agent_list_response_agents_additional_property.py  agent_recommendation_request_context_type_0.py  agent_request_context_type_0.py  agent_response_error_details_type_0.py  agent_response_metadata_type_0.py  agent_response_tokens_used_type_0.py  artifact_response.py  artifact_response_template_type_0.py  association_response.py  attribution_filter.py  auth_response_org_type_0.py  auth_response_user.py  auto_map_elements_operation.py  backup_create_request.py  backup_list_response.py  backup_stats_response_backup_formats.py  batch_operator_request.py  batch_operator_response.py  bulk_association_item.py  bulk_association_item_association_type.py  bulk_create_associations_request.py  bulk_document_upload_request.py  bulk_document_upload_response.py  (+519 more)
tests/: test_agent_client.py  test_dataframe_utils.py  test_document_client.py  test_extensions.py  test_extensions_integration.py  test_file_client.py  test_graph_client.py  test_graphql_helpers.py  test_investor_client.py  test_ledger_client.py  test_materialization_client.py  test_operation_client.py  test_operation_client_ops.py  test_operator_client.py  test_query_client.py  test_query_client_ops.py  test_report_client.py  test_sse_client.py  test_table_client.py  test_token_utils.py  test_utils_unit.py
(+320 files in other folders)
