[project]
name = "robosystems-client"
version = "0.3.3"
description = "Python Client for RoboSystems financial graph database API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RFS LLC"},
]
license = {text = "MIT"}
keywords = ["client", "robosystems", "financial", "graph", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "typing-extensions>=4.0.0",
    "attrs>=23.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.21.8",
    "basedpyright>=1.21.0",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "ruff>=0.12",
    "pytest-httpx>=0.30.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robosystems_client"]

# Keep internal dev tooling out of the sdist uploaded to PyPI. Hatchling
# defaults to "everything not in .gitignore", which would drag along
# `.claude/`, `.vscode/`, `.githooks/`, and other repo-local config. The
# wheel target above is unaffected — it only includes the package dir.
[tool.hatch.build.targets.sdist]
include = [
    "/robosystems_client",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/pytest.ini",
    "/ruff.toml",
]

[tool.basedpyright]
include = ["robosystems_client/clients"]
exclude = ["tests"]
extraPaths = ["."]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportReturnType = "none"
reportInvalidTypeForm = "none"
reportMissingImports = "none"
